examples/parking-route-path.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: parking
spec:
  parentRefs:
  - name: my-hotel
    sectionName: http 
  rules:
  - backendRefs:  
    - name: parking-ver1
      kind: Service
    matches:
    - path:
        type: PathPrefix
        value: /ver1
  - backendRefs:  
    - name: parking-ver2
      kind: ServiceImport
    matches:
    - path:
        type: PathPrefix
        value: /ver2
